--- a/.github/workflows/windows-build.yml
+++ b/.github/workflows/windows-build.yml
@@ -9,10 +9,10 @@ on:
 
 env:
   QT_VERSION: 5.15.2
-  VSVERSION: '2022'
   BUILD_TYPE: Release
   INSTALL_PREFIX: D:/a/_temp/install
   PYTHON_VERSION: '3.10'
+  VCPKG_ROOT: "C:\\Program Files\\Microsoft Visual Studio\\2022\\Enterprise\\VC\\vcpkg"
 
 jobs:
   build:
@@ -73,51 +73,50 @@ jobs:
       run: echo "C:\Qt\${{ env.QT_VERSION }}\msvc2019_64\bin" >> $GITHUB_PATH
       shell: bash
 
-    - name: Setup Ninja
-      uses: seanmiddleditch/gha-setup-ninja@v4
-
-    - name: Setup VS Dev Environment
-      uses: seanmiddleditch/gha-setup-vsdevenv@master
+    - name: Setup MSBuild
+      uses: microsoft/setup-msbuild@v1.3.1
       with:
-        vsversion: ${{ env.VSVERSION }}
+        vs-version: '17.0'
+        msbuild-architecture: x64
 
-    - name: Update vcpkg.json versions
+    # Use VS Developer Command Prompt instead of ninja
+    - name: Setup VS Developer Command Prompt
+      uses: ilammy/msvc-dev-cmd@v1
+      with:
+        arch: amd64
+        sdk: '10.0.22000.0'
+
+    - name: Configure and Build with Visual Studio
+      shell: cmd
       run: |
-        $vcpkgJson = Get-Content vcpkg.json | ConvertFrom-Json
+        :: Create a CMakeSettings.json file to match VS defaults
+        echo {
+        echo   "configurations": [
+        echo     {
+        echo       "name": "x64-Release",
+        echo       "generator": "Visual Studio 17 2022",
+        echo       "configurationType": "Release",
+        echo       "inheritEnvironments": [ "msvc_x64_x64" ],
+        echo       "buildRoot": "${env.GITHUB_WORKSPACE}\\out\\build\\${name}",
+        echo       "installRoot": "${{ env.INSTALL_PREFIX }}",
+        echo       "cmakeCommandArgs": "",
+        echo       "buildCommandArgs": "",
+        echo       "ctestCommandArgs": "",
+        echo       "variables": [
+        echo         {
+        echo           "name": "Qt5_DIR",
+        echo           "value": "C:/Qt/${{ env.QT_VERSION }}/msvc2019_64/lib/cmake/Qt5",
+        echo           "type": "PATH"
+        echo         }
+        echo       ]
+        echo     }
+        echo   ]
+        echo } > CMakeSettings.json
         
-        # Update versions to match available ones
-        foreach ($dep in $vcpkgJson.dependencies) {
-          if ($dep.name -eq "opencolorio") {
-            $dep.version = "2.1.2"
-          }
-          elseif ($dep.name -eq "openimageio") {
-            $dep.version = "2.4.11.1"
-          }
-          elseif ($dep.name -eq "python3") {
-            $dep.version = "3.10.7#6"
-          }
-        }
-        
-        $vcpkgJson | ConvertTo-Json -Depth 10 | Set-Content vcpkg.json
-        
-        # Display updated content
-        Get-Content vcpkg.json
-      shell: pwsh
-
-    - name: Configure CMake
-      run: |
-        cmake -B ${{github.workspace}}/build `
-          -GNinja `
-          -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} `
-          -DCMAKE_INSTALL_PREFIX="${{ env.INSTALL_PREFIX }}" `
-          -DQt5_DIR="C:/Qt/${{ env.QT_VERSION }}/msvc2019_64/lib/cmake/Qt5"
-      shell: pwsh
-
-    - name: Build
-      run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
-      
-    - name: Install
-      run: cmake --install ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
+        :: Configure and build using VS CMake integration
+        cmake --preset x64-Release
+        cmake --build out/build/x64-Release --config Release
+        cmake --install out/build/x64-Release --config Release
 
     - name: Package
       run: |
