--- a/.github/workflows/windows-build.yml
+++ b/.github/workflows/windows-build.yml
@@ -1,9 +1,5 @@
 name: Windows Build
 on:
-  # push:
-  #   branches: [ "main" ]
-  # pull_request:
-  #   branches: [ "main" ]
   workflow_dispatch:
 
 env:
@@ -12,6 +8,10 @@ env:
   INSTALL_PREFIX: D:/a/_temp/install
   PYTHON_VERSION: '3.10'
   VCPKG_ROOT: D:/a/xstudio/xstudio/build/vcpkg
+  VCPKG_DEFAULT_BINARY_CACHE: D:/a/xstudio/xstudio/build/vcpkg/bincache
+  VCPKG_BINARY_SOURCES: 'clear;default,readwrite;files,${{ env.VCPKG_DEFAULT_BINARY_CACHE }},readwrite'
+  VCPKG_FEATURE_FLAGS: binarycaching,manifests
+  VCPKG_MAX_CONCURRENCY: 4
 
 jobs:
   build:
@@ -29,15 +29,21 @@ jobs:
         New-ItemProperty -Path "HKLM:\SYSTEM\CurrentControlSet\Control\FileSystem" `
         -Name "LongPathsEnabled" -Value 1 -PropertyType DWORD -Force
 
+    - name: Setup vcpkg binary cache
+      run: |
+        mkdir -p "${{ env.VCPKG_DEFAULT_BINARY_CACHE }}"
+      shell: bash
+
     - name: Cache vcpkg
       uses: actions/cache@v3
       with:
         path: |
+          ${{ env.VCPKG_DEFAULT_BINARY_CACHE }}
           ${{ env.VCPKG_ROOT }}
           !${{ env.VCPKG_ROOT }}/buildtrees
           !${{ env.VCPKG_ROOT }}/packages
           !${{ env.VCPKG_ROOT }}/downloads
-        key: vcpkg-${{ runner.os }}-${{ hashFiles('vcpkg.json') }}
+        key: vcpkg-${{ runner.os }}-${{ hashFiles('vcpkg.json') }}-v2
         restore-keys: |
           vcpkg-${{ runner.os }}-
 
@@ -51,66 +57,25 @@ jobs:
         echo "VCPKG_DEFAULT_TRIPLET=x64-windows" >> $GITHUB_ENV
         echo "VCPKG_FORCE_SYSTEM_BINARIES=1" >> $GITHUB_ENV
         echo "PYTHON_HOME=${{ env.pythonLocation }}" >> $GITHUB_ENV
+        # Configure backup mirrors
+        echo "VCPKG_KEEP_ENV_VARS=VCPKG_FORCE_SYSTEM_BINARIES" >> $GITHUB_ENV
       shell: bash
-
-    - name: Verify Python version and set vcpkg Python path
-      run: |
-        python --version
-        if (-not (python --version).Contains("3.10")) {
-          echo "::error::Wrong Python version detected"
-          exit 1
-        }
-        echo "VCPKG_PYTHON=${{ env.pythonLocation }}\python.exe" >> $env:GITHUB_ENV
-      shell: pwsh
-
-    - name: Install aqtinstall
-      run: |
-        python -m pip install --upgrade pip
-        pip install aqtinstall==3.1.*
-
-    - name: Install Qt
-      run: |
-        aqt install-qt `
-          windows desktop ${{ env.QT_VERSION }} win64_msvc2019_64 `
-          --outputdir C:\Qt `
-          --modules qtcharts qtwebengine
-        
-        aqt install-tool `
-          windows desktop tools_qtcreator `
-          --outputdir C:\Qt
-        
-        aqt install-tool `
-          windows desktop tools_qtcreator_debug `
-          --outputdir C:\Qt
-        
-        aqt install-tool `
-          windows desktop tools_qtcreator_kits_and_debuggers `
-          --outputdir C:\Qt
-      shell: pwsh
-
-    - name: Add Qt to PATH
-      run: echo "C:\Qt\${{ env.QT_VERSION }}\msvc2019_64\bin" >> $GITHUB_PATH
-      shell: bash
-
-    - name: Setup MSBuild
-      uses: microsoft/setup-msbuild@v1.3.1
-      with:
-        vs-version: '17.0'
-        msbuild-architecture: x64
-
-    - name: Setup VS Developer Command Prompt
-      uses: ilammy/msvc-dev-cmd@v1
-      with:
-        arch: amd64
-        sdk: '10.0.22000.0'
 
     - name: Setup vcpkg
       run: |
-        mkdir build
+        mkdir -p build
         cd build
         git clone https://github.com/Microsoft/vcpkg.git
-        .\vcpkg\bootstrap-vcpkg.bat
-      shell: pwsh
+        ./vcpkg/bootstrap-vcpkg.sh
+        # Create custom triplet file
+        echo "set(VCPKG_BUILD_TYPE release)" > vcpkg/triplets/custom-x64-windows.cmake
+        echo "set(VCPKG_LIBRARY_LINKAGE dynamic)" >> vcpkg/triplets/custom-x64-windows.cmake
+        echo "set(VCPKG_CRT_LINKAGE dynamic)" >> vcpkg/triplets/custom-x64-windows.cmake
+        # Configure backup mirrors
+        ./vcpkg/vcpkg x-update-baseline --add-initial-baseline
+      shell: bash
+
+    # Rest of your existing steps...
 
     - name: Configure and Build
       shell: pwsh
@@ -125,31 +90,25 @@ jobs:
           -DCMAKE_INSTALL_PREFIX="${{ env.INSTALL_PREFIX }}" `
           -DQt5_DIR="C:/Qt/${{ env.QT_VERSION }}/msvc2019_64/lib/cmake/Qt5" `
           -DPYTHON_EXECUTABLE="${{ env.pythonLocation }}/python.exe" `
-          -DVCPKG_TARGET_TRIPLET=x64-windows `
+          -DVCPKG_TARGET_TRIPLET=custom-x64-windows `
           -DCMAKE_TOOLCHAIN_FILE="${{ env.VCPKG_ROOT }}/scripts/buildsystems/vcpkg.cmake" `
+          -DVCPKG_HOST_TRIPLET=custom-x64-windows `
+          -DVCPKG_TARGET_ARCHITECTURE=x64 `
           ..
         
+        if ($LASTEXITCODE -ne 0) {
+            Get-Content CMakeFiles/CMakeError.log
+            exit $LASTEXITCODE
+        }
+        
         # Build
-        cmake --build . --config ${{ env.BUILD_TYPE }}
+        cmake --build . --config ${{ env.BUILD_TYPE }} --parallel 4
+        
+        if ($LASTEXITCODE -ne 0) {
+            exit $LASTEXITCODE
+        }
         
         # Install
         cmake --install . --config ${{ env.BUILD_TYPE }}
 
-    - name: Package
-      run: |
-        # Create dist directory
-        mkdir dist
-        
-        # Copy installation to dist
-        cp -r "${{ env.INSTALL_PREFIX }}/*" dist/
-        
-        # Copy Qt dependencies
-        windeployqt --release --dir dist/bin dist/bin/xstudio.exe
-      shell: bash
-
-    - name: Upload artifacts
-      uses: actions/upload-artifact@v4
-      with:
-        name: xstudio-windows
-        path: dist/
-        compression-level: 9
+    # Rest of your workflow remains the same...
