--- a/.github/workflows/windows-build.yml
+++ b/.github/workflows/windows-build.yml
@@ -9,7 +9,7 @@ env:
   PYTHON_VERSION: '3.10'
   VCPKG_ROOT: D:/a/xstudio/xstudio/build/vcpkg
   VCPKG_DEFAULT_BINARY_CACHE: D:/a/xstudio/xstudio/build/vcpkg/bincache
-  VCPKG_BINARY_SOURCES: 'clear;default,readwrite;files,${{ env.VCPKG_DEFAULT_BINARY_CACHE }},readwrite'
+  # Remove the problematic environment variable and define it in the steps where needed
   VCPKG_FEATURE_FLAGS: binarycaching,manifests
   VCPKG_MAX_CONCURRENCY: 4
 
@@ -32,6 +32,12 @@ jobs:
     - name: Setup vcpkg binary cache
       run: |
         mkdir -p "${{ env.VCPKG_DEFAULT_BINARY_CACHE }}"
+      shell: bash
+
+    # Set VCPKG_BINARY_SOURCES after the cache directory is created
+    - name: Configure vcpkg binary sources
+      run: |
+        echo "VCPKG_BINARY_SOURCES=clear;default,readwrite;files,${{ env.VCPKG_DEFAULT_BINARY_CACHE }},readwrite" >> $GITHUB_ENV
       shell: bash
 
     - name: Cache vcpkg
@@ -57,7 +63,6 @@ jobs:
         echo "VCPKG_DEFAULT_TRIPLET=x64-windows" >> $GITHUB_ENV
         echo "VCPKG_FORCE_SYSTEM_BINARIES=1" >> $GITHUB_ENV
         echo "PYTHON_HOME=${{ env.pythonLocation }}" >> $GITHUB_ENV
-        # Configure backup mirrors
         echo "VCPKG_KEEP_ENV_VARS=VCPKG_FORCE_SYSTEM_BINARIES" >> $GITHUB_ENV
       shell: bash
 
@@ -71,11 +76,8 @@ jobs:
         echo "set(VCPKG_BUILD_TYPE release)" > vcpkg/triplets/custom-x64-windows.cmake
         echo "set(VCPKG_LIBRARY_LINKAGE dynamic)" >> vcpkg/triplets/custom-x64-windows.cmake
         echo "set(VCPKG_CRT_LINKAGE dynamic)" >> vcpkg/triplets/custom-x64-windows.cmake
-        # Configure backup mirrors
         ./vcpkg/vcpkg x-update-baseline --add-initial-baseline
       shell: bash
-
-    # Rest of your existing steps...
 
     - name: Configure and Build
       shell: pwsh
@@ -110,5 +112,3 @@ jobs:
         
         # Install
         cmake --install . --config ${{ env.BUILD_TYPE }}
-
-    # Rest of your workflow remains the same...
