--- a/.github/workflows/windows-build.yml
+++ b/.github/workflows/windows-build.yml
@@ -1,5 +1,10 @@
 name: Windows Build
+
 on:
+  # push:
+  #   branches: [ "main" ]
+  # pull_request:
+  #   branches: [ "main" ]
   workflow_dispatch:
 
 env:
@@ -7,10 +12,7 @@ env:
   BUILD_TYPE: Release
   INSTALL_PREFIX: D:/a/_temp/install
   PYTHON_VERSION: '3.10'
-  VCPKG_ROOT: D:/a/xstudio/xstudio/build/vcpkg
-  VCPKG_DEFAULT_BINARY_CACHE: D:/a/xstudio/xstudio/build/vcpkg/bincache
-  VCPKG_FEATURE_FLAGS: binarycaching,manifests
-  VCPKG_MAX_CONCURRENCY: 4
+  VCPKG_ROOT: "C:\\Program Files\\Microsoft Visual Studio\\2022\\Enterprise\\VC\\vcpkg"
 
 jobs:
   build:
@@ -28,124 +30,97 @@ jobs:
         New-ItemProperty -Path "HKLM:\SYSTEM\CurrentControlSet\Control\FileSystem" `
         -Name "LongPathsEnabled" -Value 1 -PropertyType DWORD -Force
 
-    - name: Create build directory
-      run: |
-        mkdir -p build
-      shell: bash
-
-    - name: Setup vcpkg binary cache
-      run: |
-        mkdir -p "${{ env.VCPKG_DEFAULT_BINARY_CACHE }}"
-      shell: bash
-
-    - name: Configure vcpkg binary sources
-      run: |
-        echo "VCPKG_BINARY_SOURCES=clear;default,readwrite;files,${{ env.VCPKG_DEFAULT_BINARY_CACHE }},readwrite" >> $GITHUB_ENV
-      shell: bash
-
-    - name: Cache vcpkg
-      uses: actions/cache@v3
-      with:
-        path: |
-          ${{ env.VCPKG_DEFAULT_BINARY_CACHE }}
-          ${{ env.VCPKG_ROOT }}
-          !${{ env.VCPKG_ROOT }}/buildtrees
-          !${{ env.VCPKG_ROOT }}/packages
-          !${{ env.VCPKG_ROOT }}/downloads
-        key: vcpkg-${{ runner.os }}-${{ hashFiles('vcpkg.json') }}-v2
-        restore-keys: |
-          vcpkg-${{ runner.os }}-
-
     - name: Set up Python 3.10
       uses: actions/setup-python@v5
       with:
         python-version: '${{ env.PYTHON_VERSION }}'
 
-    - name: Configure vcpkg environment
+    - name: Verify Python version
       run: |
-        echo "VCPKG_DEFAULT_TRIPLET=x64-windows" >> $GITHUB_ENV
-        echo "VCPKG_FORCE_SYSTEM_BINARIES=1" >> $GITHUB_ENV
-        echo "PYTHON_HOME=${{ env.pythonLocation }}" >> $GITHUB_ENV
-        echo "VCPKG_KEEP_ENV_VARS=VCPKG_FORCE_SYSTEM_BINARIES" >> $GITHUB_ENV
+        python --version
+        if (-not (python --version).Contains("3.10")) {
+          echo "::error::Wrong Python version detected"
+          exit 1
+        }
+      shell: pwsh
+
+    - name: Install aqtinstall
+      run: |
+        python -m pip install --upgrade pip
+        pip install aqtinstall==3.1.*
+
+    - name: Install Qt
+      run: |
+        aqt install-qt `
+          windows desktop ${{ env.QT_VERSION }} win64_msvc2019_64 `
+          --outputdir C:\Qt `
+          --modules qtcharts qtwebengine
+        
+        aqt install-tool `
+          windows desktop tools_qtcreator `
+          --outputdir C:\Qt
+        
+        aqt install-tool `
+          windows desktop tools_qtcreator_debug `
+          --outputdir C:\Qt
+        
+        aqt install-tool `
+          windows desktop tools_qtcreator_kits_and_debuggers `
+          --outputdir C:\Qt
+      shell: pwsh
+
+    - name: Add Qt to PATH
+      run: echo "C:\Qt\${{ env.QT_VERSION }}\msvc2019_64\bin" >> $GITHUB_PATH
       shell: bash
 
-    - name: Setup vcpkg
-      run: |
-        cd build
-        # Check if vcpkg directory exists and is valid
-        if [ ! -f "vcpkg/bootstrap-vcpkg.sh" ]; then
-          rm -rf vcpkg
-          git clone https://github.com/Microsoft/vcpkg.git
-        fi
-        
-        # Make bootstrap script executable and run it
-        chmod +x vcpkg/bootstrap-vcpkg.sh
-        ./vcpkg/bootstrap-vcpkg.sh
-        
-        # Create custom triplet file with proper architecture setting
-        mkdir -p vcpkg/triplets
-        cat > vcpkg/triplets/custom-x64-windows.cmake << EOF
-set(VCPKG_TARGET_ARCHITECTURE x64)
-set(VCPKG_CRT_LINKAGE dynamic)
-set(VCPKG_LIBRARY_LINKAGE dynamic)
-set(VCPKG_BUILD_TYPE release)
-set(VCPKG_CMAKE_SYSTEM_NAME Windows)
-EOF
-        
-        # Update baseline
-        ./vcpkg/vcpkg x-update-baseline --add-initial-baseline
-      shell: bash
+    - name: Setup MSBuild
+      uses: microsoft/setup-msbuild@v1.3.1
+      with:
+        vs-version: '17.0'
+        msbuild-architecture: x64
+
+    - name: Setup VS Developer Command Prompt
+      uses: ilammy/msvc-dev-cmd@v1
+      with:
+        arch: amd64
+        sdk: '10.0.22000.0'
 
     - name: Configure and Build
       shell: pwsh
       run: |
+        # Create build directory
+        mkdir build
         cd build
         
-        # Create CMakeSettings.json for custom configuration
-        $cmakeSettings = @{
-          configurations = @(
-            @{
-              name = "${{ env.BUILD_TYPE }}"
-              generator = "Visual Studio 17 2022"
-              architecture = @{
-                value = "x64"
-                strategy = "set"
-              }
-            }
-          )
-        } | ConvertTo-Json -Depth 10
-        
-        Set-Content -Path "CMakeSettings.json" -Value $cmakeSettings
-        
         # Configure with CMake
-        cmake `
+        cmake .. `
           -G "Visual Studio 17 2022" `
           -A x64 `
-          -DCMAKE_BUILD_TYPE="${{ env.BUILD_TYPE }}" `
+          -DCMAKE_BUILD_TYPE=${{ env.BUILD_TYPE }} `
           -DCMAKE_INSTALL_PREFIX="${{ env.INSTALL_PREFIX }}" `
-          -DQt5_DIR="C:/Qt/${{ env.QT_VERSION }}/msvc2019_64/lib/cmake/Qt5" `
-          -DPYTHON_EXECUTABLE="${{ env.pythonLocation }}/python.exe" `
-          -DVCPKG_TARGET_TRIPLET=custom-x64-windows `
-          -DCMAKE_TOOLCHAIN_FILE="${{ env.VCPKG_ROOT }}/scripts/buildsystems/vcpkg.cmake" `
-          -DVCPKG_HOST_TRIPLET=x64-windows `
-          -DVCPKG_OVERLAY_TRIPLETS="${{ env.VCPKG_ROOT }}/triplets" `
-          ..
-        
-        if ($LASTEXITCODE -ne 0) {
-            if (Test-Path "CMakeFiles/CMakeError.log") {
-                Get-Content CMakeFiles/CMakeError.log
-            } else {
-                Write-Host "CMakeError.log not found. Build failed with exit code $LASTEXITCODE"
-            }
-            exit $LASTEXITCODE
-        }
+          -DQt5_DIR="C:/Qt/${{ env.QT_VERSION }}/msvc2019_64/lib/cmake/Qt5"
         
         # Build
-        cmake --build . --config ${{ env.BUILD_TYPE }} --parallel 4
-        
-        if ($LASTEXITCODE -ne 0) {
-            exit $LASTEXITCODE
-        }
+        cmake --build . --config ${{ env.BUILD_TYPE }}
         
         # Install
         cmake --install . --config ${{ env.BUILD_TYPE }}
+
+    - name: Package
+      run: |
+        # Create dist directory
+        mkdir dist
+        
+        # Copy installation to dist
+        cp -r "${{ env.INSTALL_PREFIX }}/*" dist/
+        
+        # Copy Qt dependencies
+        windeployqt --release --dir dist/bin dist/bin/xstudio.exe
+      shell: bash
+
+    - name: Upload artifacts
+      uses: actions/upload-artifact@v4
+      with:
+        name: xstudio-windows
+        path: dist/
+        compression-level: 9
